[package]
name = "mygo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["net", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
