[package]
name = "mygo"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["levinion <levinnion@gmail.com>"]
description = "A fast HTTP server in Rust with Axum for better performance and UI 🚀"
repository = "https://github.com/levinion/mygo"
documentation = "https://docs.rs/mygo"
keywords = ["net", "http", "server"]

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["net", "rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
